# hasql-queue

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Vagrantfile  cabal.project  db-queue.cabal  db-testing-example.cabal  developer_notes.md  hasql-queue.cabal  package.yaml  postgresql-simple-queue.cabal  stack.yaml
benchmarks/: Main.hs
examples/: EmailQueue.hs
hasql-queue-tmp-db/: Main.hs
s/: ghcid  ghcid-bench  test-time
src/Database/: Queue.hs
src/Database/Hasql/: Queue.hs
src/Database/Hasql/Queue/: Migrate.hs
src/Database/PostgreSQL/Simple/: Queue.hs
src/Database/PostgreSQL/Simple/Queue/: Main.hs  Migrate.hs
src/Database/PostgreSQL/Simple/Queue/Examples/: EmailQueue.hs
src/Database/Queue/: Main.hs  Migrate.hs
src/Database/Queue/Examples/: EmailQueue.hs
src/Hasql/: Queue.hs
src/Hasql/Queue/: IO.hs  Internal.hs  Migrate.hs  Partition.hs  Session.hs
src/Hasql/Queue/High/: AtLeastOnce.hs  AtMostOnce.hs  ExactlyOnce.hs
src/Hasql/Queue/Low/: AtLeastOnce.hs  AtMostOnce.hs  ExactlyOnce.hs
test/: Main.hs
test/Database/: QueueSpec.hs
test/Database/Hasql/: QueueSpec.hs
test/Database/Hasql/Queue/: IOSpec.hs  PartitionSpec.hs  SessionSpec.hs  TestUtils.hs
test/Database/PostgreSQL/Simple/: QueueSpec.hs
test/Hasql/Queue/: MigrateSpec.hs  TestUtils.hs
test/Hasql/Queue/High/: AtLeastOnceSpec.hs  AtMostOnceSpec.hs  ExactlyOnceSpec.hs
test/Hasql/Queue/Low/: AtLeastOnceSpec.hs  AtMostOnceSpec.hs  ExactlyOnceSpec.hs
test/Test/: Setup.hs
