name:                db-queue
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/db-testing-example#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Database.Queue
                 , Database.Queue.Examples.EmailQueue
                 , Database.Queue.Migrate
                 , Database.Queue.Main
  build-depends: base >= 4.7 && < 5
               , postgresql-simple
               , pg-transact
               , aeson
               , time
               , uuid
               , transformers
               , random
               , text
               , monad-control
               , postgresql-simple-opts
               , resource-pool
               , optparse-generic
               , data-default
               , monad-control
               , lifted-base
               , lifted-async
               , exceptions
               , bytestring
  default-language:    Haskell2010
  ghc-options: -Wall -Werror -Wno-unused-do-bind

executable async-email-example
  hs-source-dirs:      examples
  main-is:             EmailQueue.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , db-queue
               , amazonka
               , amazonka-ses
               , lens
               , text
               , aeson
               , lifted-base
  default-language:    Haskell2010

test-suite db-testing-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is: Spec.hs
  other-modules: Database.QueueSpec
               , Test.Setup
  build-depends: base
               , db-queue
               , hspec
               , hspec-discover
               , tmp-postgres
               , postgresql-simple
               , pg-transact
               , bytestring
               , aeson
               , hspec-expectations-lifted
               , text
               , resource-pool
               , async
               , postgresql-libpq
  ghc-options: -Wall -Werror -Wno-unused-do-bind -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/db-testing-example
